--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,4 +6,8 @@
         <link rel="stylesheet" href="/stylesheets/style.css" />
         <title><%= title %></title>
     </head>
+    <nav>
+        <a href="/" class="navlink">Home</a> | <a href="/flights" class="navlink">shelf</a> | <a href="/flights/new" class="navlink">New</a>
+    </nav>
+    <br>
     <body>
