create view files

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
         <title><%= title %></title>
     </head>
     <nav>
-        <a href="/" class="navlink">Home</a> | <a href="/flights" class="navlink">shelf</a> | <a href="/flights/new" class="navlink">New</a>
+        <a href="/" class="navlink">home</a> | <a href="/shelves/index" class="navlink">shelf</a> | <a href="/books/index" class="navlink">books</a>
     </nav>
     <br>
     <body>
