--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,39 @@
 * {
   font-family: "American Typewriter", sans-serif;
+  margin: 0 auto;
 }
 
 body {
   background-color: rgb(255, 191, 0);
   color: rgb(43, 43, 43);
+  text-align: center;
 }
 
 .logo {
-  color: rgb(67, 49, 27);
+  color: rgb(95, 70, 39);
   font-size: 30px;
+}
+
+nav {
+  background-color: rgb(95, 70, 39);
+  height: 30px;
+  font-weight: bold;
+  line-height: 30px;
+  text-align: left;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  box-shadow: 0px 2px 6px 2px;
+}
+
+.navlink {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.navlink:hover {
+  color: rgb(255, 191, 0);
 }
 
 h1 {
@@ -21,7 +45,7 @@ h2 {
 }
 
 p {
-
+  
 }
 
 a {
