--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
-<%- include('./partials/header') %>
+<%- include('../views/partials/header') %>
 
   <h2><%= error.status %></h2>
   <h1><%= message %></h1>
   <pre><%= error.stack %></pre>
 
-<%- include('./partials/footer') %>
+<%- include('../views/partials/footer') %>
