--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
-<%- include('./partials/header') %>
+<%- include('../views/partials/header') %>
 
   <h1 class="logo">/<font color="white">shelf</h1></font><br>
   <p>put a book on it</p>
 
-<%- include('./partials/footer') %>
+<%- include('../views/partials/footer') %>
