--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,7 @@ nav {
   color: white;
   font-weight: bold;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .navlink:hover {
@@ -40,20 +41,4 @@ nav {
 h1 {
   color: rgb(95, 70, 39);
   font-weight: bold;
-}
-
-h2 {
-
-}
-
-p {
-  
-}
-
-a {
-
-}
-
-a:hover {
-
 }
