--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/stylesheets/style.css" />
-        <title><%= title %></title>
+        <title>/shelf</title>
     </head>
     <nav>
-        <a href="/" class="navlink">home</a> | <a href="/shelves/index" class="navlink">shelf</a> | <a href="/books/index" class="navlink">books</a>
+        <a href="/" class="navlink">home</a> | <a href="/shelves/index" class="navlink">shelf</a> | <a href="/books/index" class="navlink">books</a> | <% if (user) { %> <a href="/logout">Sign Out</a> <% } else { %> <a href="/auth/google">Sign In</a> <% } %>
     </nav>
     <br>
     <body>
