--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,10 @@
 <%- include('./partials/header') %>
-
-  <h2><%= error.status %></h2>
-  <h1><%= message %></h1>
-  <pre><%= error.stack %></pre>
-
+  <h1>Uh oh!</h1>
+  <br>
+  <h3><%= error.status %></h3>
+  <h2><%= message %></h2>
+  <section class="error">
+    <p><%= error.stack %></p>
+  </section>
+  
 <%- include('./partials/footer') %>
