--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,9 @@
         <title>/shelf</title>
     </head>
     <nav>
-        <a href="/" class="navlink">home</a> | <a href="/shelves/index" class="navlink">shelf</a> | <a href="/books/index" class="navlink">books</a> | <% if (user) { %> <a href="/logout">Sign Out</a> <% } else { %> <a href="/auth/google">Sign In</a> <% } %>
+        <a href="/" class="navlink">home</a> |
+        <a href="/shelves/index" class="navlink">shelf</a> |
+        <a href="/books/index" class="navlink">books</a> |
     </nav>
     <br>
     <body>
