--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,7 @@ nav {
   background-color: rgb(95, 70, 39);
   height: 30px;
   font-weight: bold;
+  font-size: 12px;
   line-height: 30px;
   text-align: left;
   display: flex;
