--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,11 @@
         <a href="/" class="navlink">home</a> |
         <a href="/shelves/index" class="navlink">shelf</a> |
         <a href="/books/index" class="navlink">books</a> |
+        <% if (user) { %>
+            <a href="/logout" class="navlink">sign out</a>
+        <% } else { %>
+            <a href="/auth/google" class="navlink">sign in</a>
+        <% } %>
     </nav>
     <br>
     <body>
