--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@ body {
   text-align: center;
 }
 
-.logo {
+#logo {
   color: rgb(95, 70, 39);
   font-size: 30px;
   font-weight: bold;
@@ -18,14 +18,61 @@ body {
 nav {
   background-color: rgb(95, 70, 39);
   height: 30px;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 30px;
-  text-align: left;
+  /* box-shadow: 0px 2px 6px 2px; */
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  box-shadow: 0px 2px 6px 2px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.logo {
+  width: 20vmin;
+  height: 17px;
+  margin: 13px 0px 0px 0px;
+  order: 0;
+  display: inline-flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 8px;
+  text-align: left;
+}
+
+.links {
+  width: 60vmin;
+  order: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+  text-align: center;
+}
+
+.sign-in {
+  width: 20vmin;
+  order: 2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 8px;
+  text-align: right;
+}
+
+#navlogo {
+  height: 17px;
+  width: 17px;
+  border-radius: 6px;
+}
+
+#avatar {
+  height: 17px;
+  width: 17px;
+  border-radius: 6px;
+}
+
+#anonatar {
+  height: 17px;
+  width: 17px;
+  border-radius: 6px;
 }
 
 .navlink {
