--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,5 +1,5 @@
-<%- include('../partials/header') %>
+<%- include('./partials/header') %>
 
-<h1>The books index page</h1>
-  
-<%- include('../partials/footer') %>
+  <h1>This is the books index page.</h1>
+
+<%- include('./partials/footer') %>
