--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include('./partials/header') %>
 
-  <h1 class="logo">/<font color="white">shelf</h1></font><br>
-  <p>put a book on it</p>
+<br><br>
+<h1 id="logo">/<font color="white">shelf</h1></font>
+<br>
 
 <%- include('./partials/footer') %>
