--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,15 +6,23 @@
         <link rel="stylesheet" href="/stylesheets/style.css" />
         <title>/shelf</title>
     </head>
-    <nav>
-        <a href="/" class="navlink">home</a> |
-        <a href="/shelves/index" class="navlink">shelf</a> |
-        <a href="/books/index" class="navlink">books</a> |
-        <% if (user) { %>
-            <a href="/logout" class="navlink">sign out</a>
-        <% } else { %>
-            <a href="/auth/google" class="navlink">sign in</a>
-        <% } %>
-    </nav>
-    <br>
     <body>
+        <nav>
+            <div class="logo">
+                <a href="/" class="navlink"><img src="./images/logo.png" id="navlogo"></a>
+            </div>
+            <div class="links">
+                <a href="/shelves/index" class="navlink">my shelf</a>
+                <a href="/books/index" class="navlink">books</a>
+            </div>
+            <div class="sign-in">
+            <% if (user) { %>
+                <a href="/logout" class="navlink">sign out</a>
+                <img src="<%= user.avatar %>" id="avatar">
+            <% } else { %>
+                <a href="/auth/google" class="navlink">sign in</a>
+                <img src="./images/anon.png" id="anonatar">
+            <% } %>
+            </div>
+        </nav>
+        <br>
