--- a/views/shelves/new.ejs
+++ b/views/shelves/new.ejs
@@ -1,5 +1,5 @@
-<%- include('../partials/header') %>
+<%- include('./partials/header') %>
 
-<h1>The shelf new page</h1>
-  
-<%- include('../partials/footer') %>
+  <h1>This is the shelves new page.</h1>
+
+<%- include('./partials/footer') %>
