--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
 
-<br><br>
+<div id="main-page">
 <h1 id="logo">/<font color="white">shelf</h1></font>
-<br>
+</div>
 
 <%- include('./partials/footer') %>
