--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
             <div class="links">
                 <a href="/shelves/index" class="navlink">my shelf</a>
                 <a href="/books/index" class="navlink">books</a>
+                <a href="/books/search" class="navlink">search</a>
             </div>
             <div class="sign-in">
             <% if (user) { %>
