fix nav bar load issue

--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header') %>
+<%- include('../partials/header') %>
 
   <h1>This is the books search page.</h1>
     <form action="">
@@ -6,4 +6,4 @@
         <button type="submit" class="btn">Search</button>
     </form>
 
-<%- include('./partials/footer') %>
+<%- include('../partials/footer') %>
