--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
     <body>
         <nav>
             <div class="logo">
-                <a href="/" class="navlink"><img src="./images/logo.png" id="navlogo"></a>
+                <a href="/" class="navlink"><img src="/images/logo.png" id="navlogo"></a>
             </div>
             <div class="links">
                 <a href="/shelves/index" class="navlink">my shelf</a>
@@ -20,7 +20,7 @@
             <% if (user) { %>
                 <a href="/logout" class="navlink"><img src="<%= user.avatar %>" id="avatar"></a>
             <% } else { %>
-                <a href="/auth/google" class="navlink"><img src="./images/anon.png" id="anonatar"></a>
+                <a href="/auth/google" class="navlink"><img src="/images/anon.png" id="anonatar"></a>
             <% } %>
             </div>
         </nav>
