--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,5 +1,10 @@
 <%- include('../partials/header') %>
 
   <h1>This is the books index page.</h1>
+  <br><br>
+
+  <form action="/books/new">
+    <button type="submit" class="btn">New</button>
+  </form>
 
 <%- include('../partials/footer') %>
