--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,5 +1,19 @@
 <%- include('../partials/header') %>
 
   <h1>This is the books new page.</h1>
+  <br><br>
+
+  <form action="/books" method="POST">
+    <label>Title:
+      <input type="text" name="title" autocomplete="off">
+    </label><br><br>
+    <label>Author:
+      <input type="text" name="author" autocomplete="off">
+    </label><br><br>
+    <label>Length:
+        <input type="text" name="length" autocomplete="off">
+    </label><br><br>
+    <center><input type="submit" value="Add" class="btn"></center>
+</form>
 
 <%- include('../partials/footer') %>
