--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -3,8 +3,30 @@
   <h1>This is the books index page.</h1>
   <br><br>
 
-  <form action="/books/new">
-    <button type="submit" class="btn">New</button>
-  </form>
+  <table>
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Published</th>
+            <th>Details</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% user.books.forEach((book) => { %>
+            <tr>
+                <td><%= book.title %></td>
+                <td><%= book.author %></td>
+                <td><%= book.publishYear %></td>
+                <td>
+                    <form action="/books/">
+                        <button type="submit" class="btn">View</button>
+                    </form>
+                </td>
+            </tr>
+        <% }); %>
+    </tbody>
+  </table>
+  <br>
 
 <%- include('../partials/footer') %>
