--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -1,9 +1,101 @@
 <%- include('../partials/header') %>
 
-  <h1>This is the books search page.</h1>
-    <form action="">
-        <input type="text">
-        <button type="submit" class="btn">Search</button>
-    </form>
+  <h1>This is the books search page</h1><br>
+    <form action="/books/search/api" method="POST">
+        <input type="text" name="query" autocomplete="off"><br><br>
+        <button type="submit" class="btn">Go</button>
+    </form><br>
+    <hr>
+    <br>
+
+    <% if (!results) { %>
+      <p>No results!</p>
+    <% } else { %>
+      <form action="/books/add" method="POST">
+        <div class="result-card">
+          <table>
+            <thead>
+              <th class="cardtitle"><%= results.docs[0].title %></th>
+              <input type="text" name="title" hidden value="<%= results.docs[0].title %>"><br>
+            </thead>
+            <tbody>
+              <tr><%= results.docs[0].author_name %></tr>
+              <input type="text" name="author" hidden value="<%= results.docs[0].author_name %>"><br>
+              <tr><%= results.docs[0].first_publish_year %></tr>
+              <input type="text" name="publishYear" hidden value="<%= results.docs[0].first_publish_year %>"><br>
+            </tbody>
+          </table>
+        </div>
+        <button type="submit">Add</button>
+      </form><br>
+      <form action="/books/add" method="POST">
+        <div class="result-card">
+          <table>
+            <thead>
+              <th class="cardtitle"><%= results.docs[1].title %></th>
+              <input type="text" name="title" hidden value="<%= results.docs[1].title %>"><br>
+            </thead>
+            <tbody>
+              <tr><%= results.docs[1].author_name %></tr>
+              <input type="text" name="author" hidden value="<%= results.docs[1].author_name %>"><br>
+              <tr><%= results.docs[1].first_publish_year %></tr>
+              <input type="text" name="publishYear" hidden value="<%= results.docs[1].first_publish_year %>"><br>
+            </tbody>
+          </table>
+        </div>
+        <button type="submit">Add</button>
+      </form><br>
+      <form action="/books/add" method="POST">
+        <div class="result-card">
+          <table>
+            <thead>
+              <th class="cardtitle"><%= results.docs[2].title %></th>
+              <input type="text" name="title" hidden value="<%= results.docs[2].title %>"><br>
+            </thead>
+            <tbody>
+              <tr><%= results.docs[2].author_name %></tr>
+              <input type="text" name="author" hidden value="<%= results.docs[2].author_name %>"><br>
+              <tr><%= results.docs[2].first_publish_year %></tr>
+              <input type="text" name="publishYear" hidden value="<%= results.docs[2].first_publish_year %>"><br>
+            </tbody>
+          </table>
+        </div>
+        <button type="submit">Add</button>
+      </form><br>
+      <form action="/books/add" method="POST">
+        <div class="result-card">
+          <table>
+            <thead>
+              <th class="cardtitle"><%= results.docs[3].title %></th>
+              <input type="text" name="title" hidden value="<%= results.docs[3].title %>"><br>
+            </thead>
+            <tbody>
+              <tr><%= results.docs[3].author_name %></tr>
+              <input type="text" name="author" hidden value="<%= results.docs[3].author_name %>"><br>
+              <tr><%= results.docs[3].first_publish_year %></tr>
+              <input type="text" name="publishYear" hidden value="<%= results.docs[3].first_publish_year %>"><br>
+            </tbody>
+          </table>
+        </div>
+        <button type="submit">Add</button>
+      </form><br>
+      <form action="/books/add" method="POST">
+        <div class="result-card">
+          <table>
+            <thead>
+              <th class="cardtitle"><%= results.docs[4].title %></th>
+              <input type="text" name="title" hidden value="<%= results.docs[4].title %>"><br>
+            </thead>
+            <tbody>
+              <tr><%= results.docs[4].author_name %></tr>
+              <input type="text" name="author" hidden value="<%= results.docs[4].author_name %>"><br>
+              <tr><%= results.docs[4].first_publish_year %></tr>
+              <input type="text" name="publishYear" hidden value="<%= results.docs[4].first_publish_year %>"><br>
+            </tbody>
+          </table>
+        </div>
+        <button type="submit">Add</button>
+      </form><br>
+    <% } %>
 
 <%- include('../partials/footer') %>
