--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-  <h1>This is the books index page.</h1>
+  <h2>Your Book List</h2>
   <br><br>
 
   <table>
@@ -19,7 +19,7 @@
                 <td><%= book.author %></td>
                 <td><%= book.publishYear %></td>
                 <td>
-                    <form action="/books/">
+                    <form action="/books/<%= book._id %>">
                         <button type="submit" class="btn">View</button>
                     </form>
                 </td>
