--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -6,21 +6,27 @@
   <table>
     <thead>
         <tr>
+            <th>Details</th>
             <th>Title</th>
             <th>Author</th>
             <th>Published</th>
-            <th>Details</th>
+            <th>Remove</th>
         </tr>
     </thead>
     <tbody>
-        <% user.books.forEach((book) => { %>
+        <% user.books.forEach((book, idx) => { %>
             <tr>
+                <td>
+                    <form action="/books/<%= idx %>" method="GET">
+                        <button type="submit" class="btn">View</button>
+                    </form>
+                </td>
                 <td><%= book.title %></td>
                 <td><%= book.author %></td>
                 <td><%= book.publishYear %></td>
                 <td>
-                    <form action="/books/<%= book._id %>">
-                        <button type="submit" class="btn">View</button>
+                    <form action="/books/<%= idx %>?_method=DELETE" method="POST">
+                        <button type="submit" class="deletebtn">x</button>
                     </form>
                 </td>
             </tr>
