--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -2,21 +2,31 @@
 
 <h2>Book Details</h2>
 <br>
-<section>
-    <table>
-        <thead>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Published</th>
-        </thead>
-        <tbody>
-            <tr>
-                <tc><%= book.title %></tc>
-                <tc><%= book.author %></tc>
-                <tc><%= book.publishYear %></tc>
-            </tr>
-        </tbody>
-    </table>
+<section class="book">
+    <div class="spine">
+        <span class="booktitle">
+            <%= book.title %>
+        </span>
+        <span class="bookauthor-year">
+            <br><br><br>
+            <%= book.author %>
+            <br><br>
+            <%= book.publishYear %>
+            <br><br>
+        </span>
+        <br><br>
+        <form action="/books" method="POST">
+            <select name="rate">
+                <option value="5">5</option>
+                <option value="4">4</option>
+                <option value="3">3</option>
+                <option value="2">2</option>
+                <option value="1">1</option>
+            </select>
+            <button type="submit" class="btn">Rate</button>
+        </form>
+        <br>
+    </div>
 </section>
 
 <%- include('../partials/footer') %>
