--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -17,7 +17,7 @@
         <% user.books.forEach((book, idx) => { %>
             <tr>
                 <td>
-                    <form action="/books/<%= idx %>" method="GET">
+                    <form action="/books/<%= book._id %>" method="GET">
                         <button type="submit" class="btn">View</button>
                     </form>
                 </td>
