--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,11 +1,10 @@
 <%- include('./partials/header') %>
 
       <br>
-      <br>
       <h1>Uh oh!</h1>
         <br>
         <h3><%= error.status %></h3>
-        <h2><%= message %></h2>
+        <h2><%= message %></h2><br>
         <section class="error">
           <p><%= error.stack %></p>
         </section>
