--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,17 @@ body {
   text-align: center;
 }
 
+a {
+  color: rgb(95, 70, 39);
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+
 #main-page {
   height: 88vmin;
   line-height: 88vmin;
@@ -193,8 +204,8 @@ h1, h2, h3 {
 }
 
 .searchresults {
-  height: 80vmin;
-  line-height: 80vmin;
+  height: 78vmin;
+  line-height: 78vmin;
   text-align: center;
 }
 
@@ -264,4 +275,8 @@ thead {
 td {
   padding: 1.3vmin;
   color: rgb(255, 255, 255);
+}
+
+.message {
+  font-size: 2.2vmin;
 }
