--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -2,37 +2,44 @@
 
   <h2>Your Book List</h2>
   <br><br>
-
-  <table id="list">
-    <thead>
-        <tr>
-            <th>Details</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Published</th>
-            <th>Remove</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% user.books.forEach((book, idx) => { %>
-            <tr>
-                <td>
-                    <form action="/books/<%= book._id %>" method="GET">
-                        <button type="submit" class="btn">View</button>
-                    </form>
-                </td>
-                <td><%= book.title %></td>
-                <td><%= book.author %></td>
-                <td><%= book.publishYear %></td>
-                <td>
-                    <form action="/books/<%= idx %>?_method=DELETE" method="POST">
-                        <button type="submit" class="deletebtn">x</button>
-                    </form>
-                </td>
-            </tr>
-        <% }); %>
-    </tbody>
-  </table>
-  <br>
+    <% if (user.books) { %>
+    <span class="message">
+    You don't have any books yet.<br><br>
+    <h1>😢</h1><br>
+    Click <a href="/books/search">search</a> and find books to add to your list!
+    </span>
+    <% } else { %>
+        <table id="list">
+            <thead>
+                <tr>
+                    <th>Details</th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Published</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% user.books.forEach((book, idx) => { %>
+                    <tr>
+                        <td>
+                            <form action="/books/<%= book._id %>" method="GET">
+                                <button type="submit" class="btn">View</button>
+                            </form>
+                        </td>
+                        <td><%= book.title %></td>
+                        <td><%= book.author %></td>
+                        <td><%= book.publishYear %></td>
+                        <td>
+                            <form action="/books/<%= idx %>?_method=DELETE" method="POST">
+                                <button type="submit" class="deletebtn">x</button>
+                            </form>
+                        </td>
+                    </tr>
+                <% }); %>
+            </tbody>
+        </table>
+        <br>
+    <% } %>
 
 <%- include('../partials/footer') %>
