--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -2,7 +2,7 @@
 
   <h2>Your Book List</h2>
   <br><br>
-    <% if (user.books) { %>
+    <% if (user.books < 1) { %>
     <span class="message">
     You don't have any books yet.<br><br>
     <h1>😢</h1><br>
