--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-  <h2><%= user.name %>'s Book List</h2>
+  <h2><%= user.name %>'s shelf</h2>
   <br><br>
     <% if (user.books < 1) { %>
     <span class="message">
