add user authentication

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
                 <a href="/"><img src="/images/logo.png" id="navlogo"></a>
             </div>
             <div class="links">
-                <a href="/books/index" class="navlink">my shelf</a>
+                <a href="/books/index" class="navlink">shelf</a>
                 <a href="/books/search" class="navlink">search</a>
             </div>
             <div class="sign-in">
