complete project MVP

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
 
 <div id="main-page">
-<h1 id="logo">/<font color="white">shelf</h1></font>
+    <img src="/images/logo.png" id="mainlogo">
 </div>
 
 <%- include('./partials/footer') %>
