--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
     <body>
         <nav>
             <div class="logo">
-                <a href="/"><img src="/images/logo.png" id="navlogo"></a>
+                <a href="/"><img src="/images/icon.png" id="navlogo"></a>
             </div>
             <div class="links">
                 <a href="/books/index" class="navlink">shelf</a>
