--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,8 +22,13 @@ a:hover {
 }
 
 #main-page {
-  height: 88vmin;
-  line-height: 88vmin;
+  height: 100vmin;
+  line-height: 100vmin;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  vertical-align: middle;
 }
 
 #logo {
@@ -86,6 +91,11 @@ nav {
   border-color: rgb(255, 255, 255);
   border-width: .4vmin;
   border-style: solid;
+}
+
+#mainlogo {
+  width: 90vmin;
+  height: auto;
 }
 
 .navlink {
