--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <%- include('./partials/header') %>
 
     <br>
-    <h1>Oops!</h1><br>
-    <h1>😳</h1><br>
+    <h1>Hey!</h1><br>
+    <h1>😠</h1><br>
     <h3>You have to be signed in to do that!</h3><br><br>
     <h2>
         <a href="/auth/google">Sign In</a>
