--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -27,9 +27,9 @@
               <input type="text" name="publishYear" hidden value="<%= results.docs[0].first_publish_year %>"><br>
             </tbody>
           </table>
-        </div>
+        </div><br>
         <button type="submit" class="btn">Add</button>
-      </form><br>
+      </form><br><br>
       <form action="/books/add" method="POST">
         <div class="result-card">
           <table>
@@ -44,9 +44,9 @@
               <input type="text" name="publishYear" hidden value="<%= results.docs[1].first_publish_year %>"><br>
             </tbody>
           </table>
-        </div>
+        </div><br>
         <button type="submit" class="btn">Add</button>
-      </form><br>
+      </form><br><br>
       <form action="/books/add" method="POST">
         <div class="result-card">
           <table>
@@ -61,9 +61,9 @@
               <input type="text" name="publishYear" hidden value="<%= results.docs[2].first_publish_year %>"><br>
             </tbody>
           </table>
-        </div>
+        </div><br>
         <button type="submit" class="btn">Add</button>
-      </form><br>
+      </form><br><br>
       <form action="/books/add" method="POST">
         <div class="result-card">
           <table>
@@ -78,9 +78,9 @@
               <input type="text" name="publishYear" hidden value="<%= results.docs[3].first_publish_year %>"><br>
             </tbody>
           </table>
-        </div>
+        </div><br>
         <button type="submit" class="btn">Add</button>
-      </form><br>
+      </form><br><br>
       <form action="/books/add" method="POST">
         <div class="result-card">
           <table>
@@ -95,9 +95,10 @@
               <input type="text" name="publishYear" hidden value="<%= results.docs[4].first_publish_year %>"><br>
             </tbody>
           </table>
-        </div>
+        </div><br>
         <button type="submit" class="btn">Add</button>
-      </form>
+      </form><br><br>
+      <hr><br>
     <% } %>
 
 <%- include('../partials/footer') %>
