add screenshots to README

--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -18,7 +18,7 @@
           <table>
             <thead>
               <th class="cardtitle"><%= results.docs[0].title %></th>
-              <input type="text" name="title" hidden value="<%= results.docs[0].title %>"><br>
+              <input type="text" name="title" hidden value="<%= results.docs[0].title %>">
             </thead>
             <tbody>
               <tr><%= results.docs[0].author_name %></tr>
@@ -35,7 +35,7 @@
           <table>
             <thead>
               <th class="cardtitle"><%= results.docs[1].title %></th>
-              <input type="text" name="title" hidden value="<%= results.docs[1].title %>"><br>
+              <input type="text" name="title" hidden value="<%= results.docs[1].title %>">
             </thead>
             <tbody>
               <tr><%= results.docs[1].author_name %></tr>
@@ -52,7 +52,7 @@
           <table>
             <thead>
               <th class="cardtitle"><%= results.docs[2].title %></th>
-              <input type="text" name="title" hidden value="<%= results.docs[2].title %>"><br>
+              <input type="text" name="title" hidden value="<%= results.docs[2].title %>">
             </thead>
             <tbody>
               <tr><%= results.docs[2].author_name %></tr>
@@ -69,7 +69,7 @@
           <table>
             <thead>
               <th class="cardtitle"><%= results.docs[3].title %></th>
-              <input type="text" name="title" hidden value="<%= results.docs[3].title %>"><br>
+              <input type="text" name="title" hidden value="<%= results.docs[3].title %>">
             </thead>
             <tbody>
               <tr><%= results.docs[3].author_name %></tr>
@@ -86,7 +86,7 @@
           <table>
             <thead>
               <th class="cardtitle"><%= results.docs[4].title %></th>
-              <input type="text" name="title" hidden value="<%= results.docs[4].title %>"><br>
+              <input type="text" name="title" hidden value="<%= results.docs[4].title %>">
             </thead>
             <tbody>
               <tr><%= results.docs[4].author_name %></tr>
