--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,8 +13,8 @@
                 <a href="/"><img src="/images/icon.png" id="navlogo"></a>
             </div>
             <div class="links">
-                <a href="/books/index" class="navlink">shelf</a>
-                <a href="/books/search" class="navlink">search</a>
+                <a href="/books/index" class="navlink">my shelf</a>
+                <a href="/books/search" class="navlink">find books</a>
             </div>
             <div class="sign-in">
             <% if (user) { %>
