--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -4,19 +4,18 @@
   <br><br>
     <% if (user.books < 1) { %>
     <span class="message">
-    You don't have any books yet.<br><br>
+    you don't have any books yet.<br><br>
     <h1>😢</h1><br>
-    <a href="/books/search">Search</a> to find books to add to your list!
+    <a href="/books/search">find a book</a> to add to your list!
     </span>
     <% } else { %>
         <table id="list">
             <thead>
                 <tr>
-                    <th>Details</th>
-                    <th>Title</th>
-                    <th>Author</th>
-                    <th>Published</th>
-                    <th>Remove</th>
+                    <th>details</th>
+                    <th>title</th>
+                    <th>author</th>
+                    <th>remove</th>
                 </tr>
             </thead>
             <tbody>
@@ -24,12 +23,11 @@
                     <tr>
                         <td>
                             <form action="/books/<%= book._id %>" method="GET">
-                                <button type="submit" class="btn">View</button>
+                                <button type="submit" class="btn">view</button>
                             </form>
                         </td>
                         <td><%= book.title %></td>
                         <td><%= book.author %></td>
-                        <td><%= book.publishYear %></td>
                         <td>
                             <form action="/books/<%= idx %>?_method=DELETE" method="POST">
                                 <button type="submit" class="deletebtn">x</button>
@@ -38,7 +36,8 @@
                     </tr>
                 <% }); %>
             </tbody>
-        </table>
+        </table><br>
+            <p><a href="/books/search">add another</a> book to your shelf!</p>
         <br>
     <% } %>
 
