--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header') %>
 
-  <h2>Search For a Book</h2><br>
+  <h2>find a book</h2><br>
     <form action="/books/search/api" method="POST">
         <input type="text" name="query" autocomplete="off" placeholder="by title...">
         <br><br>
-        <button type="submit" class="btn">Go</button>
+        <button type="submit" class="btn">find</button>
     </form><br>
     <% if (!results) { %>
       <div class="searchresults">
@@ -28,7 +28,7 @@
             </tbody>
           </table>
         </div><br>
-        <button type="submit" class="btn">Add</button>
+        <button type="submit" class="btn">add</button>
       </form><br><br>
       <form action="/books/add" method="POST">
         <div class="result-card">
@@ -45,7 +45,7 @@
             </tbody>
           </table>
         </div><br>
-        <button type="submit" class="btn">Add</button>
+        <button type="submit" class="btn">add</button>
       </form><br><br>
       <form action="/books/add" method="POST">
         <div class="result-card">
@@ -62,7 +62,7 @@
             </tbody>
           </table>
         </div><br>
-        <button type="submit" class="btn">Add</button>
+        <button type="submit" class="btn">add</button>
       </form><br><br>
       <form action="/books/add" method="POST">
         <div class="result-card">
@@ -79,7 +79,7 @@
             </tbody>
           </table>
         </div><br>
-        <button type="submit" class="btn">Add</button>
+        <button type="submit" class="btn">add</button>
       </form><br><br>
       <form action="/books/add" method="POST">
         <div class="result-card">
@@ -96,7 +96,7 @@
             </tbody>
           </table>
         </div><br>
-        <button type="submit" class="btn">Add</button>
+        <button type="submit" class="btn">add</button>
       </form><br><br>
       <hr><br>
     <% } %>
