--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -31,6 +31,6 @@
         </form>
     </div>
 </section><br>
-<p>go back to <a href="/books/index">my shelf!</a></p>
+<p>Go back to <a href="/books/index">my shelf!</a></p>
 
 <%- include('../partials/footer') %>
