--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,11 @@
 <%- include('./partials/header') %>
 
     <br>
-    <h1>hey!</h1><br>
+    <h1>Hey!</h1><br>
     <h1>😠</h1><br>
-    <h3>you have to be signed in to do that!</h3><br><br>
+    <h3>You have to be signed in to do that!</h3><br><br>
     <h2>
-        <a href="/auth/google">sign in</a>
+        <a href="/auth/google">Sign in</a>
     </h2>
     <br>
 
