--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
             </div>
             <div class="links">
                 <a href="/books/search" class="navlink">find books</a>
-                <a href="/books/index" class="navlink">My shelf</a>
+                <a href="/books/index" class="navlink">my shelf</a>
             </div>
             <div class="sign-in">
             <% if (user) { %>
